fix: paddings and alignments for home hero and media hero sections

--- a/apps/home/src/remote.css
+++ b/apps/home/src/remote.css
@@ -30,6 +30,7 @@
     --hm-spacing-5: 1.25rem;
     --hm-spacing-6: 1.5rem;
     --hm-spacing-8: 2rem;
+    --hm-spacing-10: 2.5rem;
   }
 }
 @layer utilities {
@@ -51,8 +52,8 @@
   .hm\:bottom-0 {
     bottom: var(--hm-spacing-0);
   }
-  .hm\:bottom-4 {
-    bottom: var(--hm-spacing-4);
+  .hm\:bottom-8 {
+    bottom: var(--hm-spacing-8);
   }
   .hm\:left-0 {
     left: var(--hm-spacing-0);
@@ -135,15 +136,18 @@
   .hm\:px-4 {
     padding-inline: var(--hm-spacing-4);
   }
+  .hm\:px-5 {
+    padding-inline: var(--hm-spacing-5);
+  }
   .hm\:text-white\! {
     color: var(--hm-color-white) !important;
   }
   .hm\:no-underline {
     text-decoration-line: none;
   }
-  .hm\:sm\:bottom-5 {
+  .hm\:sm\:bottom-8 {
     @media (width >= 40rem) {
-      bottom: var(--hm-spacing-5);
+      bottom: var(--hm-spacing-8);
     }
   }
   .hm\:sm\:px-5 {
@@ -151,24 +155,29 @@
       padding-inline: var(--hm-spacing-5);
     }
   }
-  .hm\:md\:bottom-6 {
+  .hm\:md\:bottom-8 {
     @media (width >= 48rem) {
-      bottom: var(--hm-spacing-6);
-    }
-  }
-  .hm\:md\:px-6 {
-    @media (width >= 48rem) {
-      padding-inline: var(--hm-spacing-6);
-    }
-  }
-  .hm\:lg\:bottom-8 {
-    @media (width >= 64rem) {
       bottom: var(--hm-spacing-8);
     }
   }
-  .hm\:lg\:px-8 {
+  .hm\:md\:px-5 {
+    @media (width >= 48rem) {
+      padding-inline: var(--hm-spacing-5);
+    }
+  }
+  .hm\:lg\:bottom-10 {
     @media (width >= 64rem) {
-      padding-inline: var(--hm-spacing-8);
+      bottom: var(--hm-spacing-10);
+    }
+  }
+  .hm\:lg\:px-5 {
+    @media (width >= 64rem) {
+      padding-inline: var(--hm-spacing-5);
+    }
+  }
+  .hm\:lg\:px-6 {
+    @media (width >= 64rem) {
+      padding-inline: var(--hm-spacing-6);
     }
   }
 }
